--- a/src/main/resources/AjoutClient.fxml
+++ b/src/main/resources/AjoutClient.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.AjoutClient">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="518.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.AjoutClient">
     <children>
         <AnchorPane layoutX="97.0" layoutY="104.0" opacity="0.18" prefHeight="314.0" prefWidth="450.0" style="-fx-background-color: #cc5a12;" />
-        <ImageView fitHeight="581.0" fitWidth="939.0" layoutX="-141.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="615.0" fitWidth="1117.0" layoutX="-141.0" pickOnBounds="true" preserveRatio="true">
             <image>
             </image>
         </ImageView>
@@ -24,25 +24,20 @@
             <font>
                 <Font name="Algerian" size="13.0" />
             </font></Button>
-        <AnchorPane layoutX="-6.0" prefHeight="99.0" prefWidth="679.0" style="-fx-background-color: #960000;">
+        <AnchorPane layoutX="-6.0" prefHeight="99.0" prefWidth="885.0" style="-fx-background-color: #960000;">
             <children>
-                <Label layoutX="279.0" layoutY="19.0" text="SIGN IN" underline="true">
+                <Label layoutX="393.0" layoutY="23.0" text="SIGN UP" underline="true">
                     <font>
                         <Font name="Algerian" size="34.0" />
                     </font>
                 </Label>
-                <ImageView fitHeight="99.0" fitWidth="113.0" layoutX="572.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="121.0" fitWidth="137.0" layoutX="743.0" layoutY="-25.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                     </image>
                 </ImageView>
             </children>
         </AnchorPane>
-        <ImageView fitHeight="74.0" fitWidth="99.0" layoutX="14.0" layoutY="362.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@images/nourriture.png" />
-            </image>
-        </ImageView>
         <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="377.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@images/programmeur.png" />
